FHEM Tablet UI change history:

 2018-11-29
 - clock: corrected the serverDiff
 
 2018-11-21
 - checkbox: fixed the jack position issue
 
 2018-11-10
 - famultibutton: added warn-fixed
 
 2018-10-19
 - svgplot: fixed the src path
 
 2018-10-08
 - clock: added class check 'localonly'
 
 2018-10-07
 - clock: get time from FHEM, added data-offset
 
 2018-10-04
 - added minTime, maxTime to datetimepicker
 
 2018-10-02
 - ftui-circle-o
 - ftui-square-thin
 
 2018-09-28  (v2.7.6)
 - widget_playstream: improved
 - added addFactor() function
 
 2018-09-27 (v2.7.5)
 - added toHoursFromMin() function
 
 2018-09-21
 - widget_pagebutton: bugfix for just url buttons
 - widget_clock: corrects intervals < 100ms to 1000ms
 - widget_chart: corrections for fa-5 icons and more
 
 2018-09-19
 - jQuery 3.3.1
 - Font Awesome 5.3
 - JQuery-ui minimal
 
 2018-09-19
 - widget_weather: extented Proplanta-WeatherIcons map
 - widget_homestatus: optimized position for text and icons
 - widget_pagebutton: optimized return-timer and multistate support
 - widget_reload: new widget
 
 2018-09-05
 - widget_weather: added Proplanta-WeatherIcons map
 - widget_homestatus: fix for Fontawesome 5 icons