@@ -1,3 +1,6 @@
 FHEM Tablet UI last changes:
  2018-11-29
  - clock: corrected the serverDiff
+ 2018-12-01
+ - image: refresh only if visible
+ - pagebutton: fixed a bug which prevented forced reload
